chore: correctly handle overflow for nearby container

--- a/app/component/departures-table.scss
+++ b/app/component/departures-table.scss
@@ -2,6 +2,7 @@
   position: relative;
   height: auto;
   display: flex;
+  overflow: auto;
 }
 
 table.nearby-departures-table {
